# sea_skipper

./: Cargo.toml  README.md
.github/workflows/: format.yml  lint.yml  main.yml  tests.yml
examples/axum_example/: .env  Cargo.toml  README.md  config.yml  docker-compose.yml
examples/axum_example/migration/: Cargo.toml
examples/axum_example/migration/src/: lib.rs  m20220101_000001_create_cake_table.rs
examples/axum_example/src/: configuration.rs  lib.rs  main.rs  resource.rs
examples/axum_example/src/api/: mod.rs  router.rs
examples/axum_example/src/api/handlers/: create.rs  delete.rs  read.rs
examples/axum_example/src/db/: migrate.rs  mod.rs  mutation.rs  query.rs
examples/axum_example/src/entity/: cake.rs  mod.rs  prelude.rs
examples/axum_example/tests/api/: cakes.rs  main.rs
examples/axum_example/tests/api/helpers/: http_client.rs  mod.rs  service.rs
sea_skipper_macros/: Cargo.toml  LICENSE
sea_skipper_macros/src/: attributes.rs  lib.rs
sea_skipper_macros/src/derives/: mod.rs  model_condition.rs  new_model.rs  util.rs
src/: lib.rs  location.rs  query_filter.rs
src/orm/: mod.rs  model_condition.rs
src/resource/: data.rs  mod.rs
