[workspace]
members = [".", "migration"]

[package]
name = "axum_example"
version = "0.1.0"
authors = ["lazulite <lazulite@riseup.net>"]
edition = "2021"
repository = "https://github.com/lazulit3/sea_skipper"

[dependencies]
anyhow = "1"
axum = { version = "0.6", default-features = false, features = ["http1", "json", "tokio"] }
config = { version = "0.13.3", default-features = false, features = ["yaml"] }
migration = { version = "0.1.0", path = "./migration" }
sea-orm = { version = "0.12", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres", "with-json"] }
sea_skipper = { path = "../..", features = ["derive", "derive-newmodel-with-serde"]}
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
bytes = "1"
reqwest = { version = "0.11", features = ["json"] }
tower = "0.4"
uuid = { version = "1", features = ["v4"] }
